<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:title="Home"
        android:checked="false"
        android:icon="@drawable/home_icon"
        android:id="@+id/home_nav"/>
    <item android:title="Workout"
        android:checked="true"
        android:icon="@drawable/workout_icon"
        android:id="@+id/workout_nav"/>
    <item android:title="Profile"
        android:checked="false"
        android:icon="@drawable/user_icon"
        android:id="@+id/profile_nav"/>
</menu>