<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp"
        tools:context=".CreateAccountActivity"
        tools:ignore="ExtraText">

        <ImageView
            android:id="@+id/sign_up_logo"
            android:layout_width="128dp"
            android:layout_height="128dp"
            android:layout_centerHorizontal="true"

            android:layout_marginVertical="32dp"
            android:contentDescription="@string/logo_description"
            android:src="@drawable/fitplus_logo_main" />

        <LinearLayout
            android:id="@+id/greeting_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/sign_up_logo"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/greeting"
                android:textColor="@color/accent"
                android:textSize="28sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lets_start"
                android:textColor="@color/main_text"
                android:textSize="36sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/form_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/greeting_layout"
            android:layout_marginVertical="32dp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/username_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:autofillHints="username"
                android:background="@drawable/rounded_corner"
                android:hint="@string/username_hint"
                android:inputType="text"
                android:padding="12dp"
                android:textColor="@color/main_text"
                android:textColorHint="@color/secondary"

                android:textSize="20sp" />

<!--            <EditText-->
<!--                android:id="@+id/email_edit_text"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_marginTop="12dp"-->
<!--                android:autofillHints="emailAddress"-->
<!--                android:background="@drawable/rounded_corner"-->
<!--                android:hint="@string/email_hint"-->
<!--                android:inputType="textEmailAddress"-->
<!--                android:padding="12dp"-->
<!--                android:textColor="@color/main_text"-->
<!--                android:textColorHint="@color/secondary"-->

<!--                android:textSize="20sp" />-->

            <EditText
                android:id="@+id/password_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:autofillHints="password"
                android:background="@drawable/rounded_corner"
                android:hint="@string/password_hint"
                android:inputType="textPassword"
                android:padding="12dp"
                android:textColor="@color/main_text"
                android:textColorHint="@color/secondary"

                android:textSize="20sp" />

            <EditText
                android:id="@+id/confirm_password_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:autofillHints="password"
                android:background="@drawable/rounded_corner"
                android:hint="@string/confirm_password_hint"
                android:inputType="textPassword"
                android:padding="12dp"
                android:textColor="@color/main_text"
                android:textColorHint="@color/secondary"

                android:textSize="20sp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/submit_sign_up_button"
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:layout_marginTop="14dp"
                android:backgroundTint="@color/accent"
                android:text="@string/create_account_caps"
                android:textColor="@color/secondary"
                android:textSize="16sp" />

            <ProgressBar
                android:id="@+id/progress_c"
                android:layout_width="32dp"
                android:layout_height="64dp"
                android:layout_gravity="center"
                android:layout_marginTop="14dp"
                android:visibility="gone" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/form_layout"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/have_account"
                android:textColor="@color/secondary" />

            <TextView
                android:id="@+id/login_text_view_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:textColor="@color/main_text"
                android:textStyle="bold" />

        </LinearLayout>

    </RelativeLayout>
</ScrollView>