<resources>
    <string name="app_name">FitPlus</string>
    <string name="moto">Make it happen</string>
    <string name="logo_description">FitPlus logo</string>
    <string name="greeting">Welcome,</string>
    <string name="lets_start">Let\'s get you started!</string>
    <string name="username_hint"><i>Username</i></string>
    <string name="username"><span>Username</span></string>
    <string name="description"><span>Description</span></string>
    <string name="email_hint"><i>example@domain.com</i></string>
    <string name="password_hint"><i>Password</i></string>
    <string name="confirm_password_hint"><i>Confirm Password</i></string>
    <string name="create_account_caps">CREATE ACCOUNT</string>
    <string name="login">Login</string>
    <string name="have_account">"Already have an account? "</string>
    <string name="welcome_back">Welcome back!</string>
    <string name="greeting2">Hello,</string>
    <string name="login_caps">LOGIN</string>
    <string name="dont_have_account">"Don't have an account? "</string>
    <string name="create_account">Create Account</string>
    <string name="quick_start_workout">Quick start</string>
    <string name="workout_header">Workout</string>
    <string name="start_empty_workout">Start empty workout</string>
    <string name="placeholder">placeholder</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="workout_details_header">Log your workout</string>
    <string name="get_started_title">Start your workout</string>
    <string name="get_started_description">Add an exercise, to start tracking your workout</string>
    <string name="add_exercise">Add an exercise</string>
    <string name="delete_workout">Delete workout</string>
    <string name="save_workout">Save</string>

</resources>