...
        android:layout_alignParentBottom="true"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="0dp">

        <Button
            android:id="@+id/signOut"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="156dp"
            android:layout_marginTop="82dp"
            android:layout_marginEnd="161dp"
            android:layout_marginBottom="350dp"
            android:backgroundTint="@color/black"
            android:text="Log Out"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
...
